--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
     </header>
 
     <nav>
-        <a href="#">Тык-тык</a>
-        <a href="#">Тук-тук</a>
-        <a href="#">Топ-топ</a>
-        <a href="#">Серезно туда нажали?</a>
+        <a href="#" onclick="showAlert('Раздел Тык-тык пока в разработке!')">Тык-тык</a>
+        <a href="#" onclick="showAlert('Раздел Тук-тук пока в разработке!')">Тук-тук</a>
+        <a href="#" onclick="showAlert('Раздел Топ-топ пока в разработке!')">Топ-топ</a>
+        <a href="#" onclick="showAlert('Серьезно туда нажали?')">Серезно туда нажали?</a>
     </nav>
 
     <main>
