--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
         <a href="#" onclick="showAlert('Раздел Топ-топ пока в разработке!')">Топ-топ</a>
         <a href="#" onclick="showAlert('Серьезно туда нажали?')">Серезно туда нажали?</a>
     </nav>
+	<script>
+        function showAlert(message) {
+            alert(message);
+        }
+    </script>
 
     <main>
         <section>
